# mcp

./: grid_spot.md
wadm_old/: .claude_context  .env  .gitignore  DOCUMENTATION_UPDATE_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  fix_imports.py  prompt_claude.md  pyproject.toml  quick-status.sh  quick_test_order_flow.py  requirements.txt  run_tests.bat  run_tests.py  test_api_order_flow.py  test_docker.bat  test_docker.sh  test_errors.txt
wadm_old/claude/: master-log.md
wadm_old/claude/adr/: ADR-001-fastmcp-adoption.md  ADR-002-simplificacion-vps.md  ADR-TEMPLATE.md  README.md
wadm_old/claude/bugs/: BUG-001.md  README.md
wadm_old/claude/docs/: ESTADO-ACTUAL-SISTEMA.md  README.md  TASK-005-SUMMARY.md  deployment-vps.md  mongodb-schemas.md  volume-profile-api-examples.md
wadm_old/claude/lessons/: LESSON-001-bug-002-endpoints-no-visibles.md
wadm_old/claude/lessons-learned/: README.md
wadm_old/claude/tasks/: TASK-TEMPLATE.md
wadm_old/docs/: integracion-waickoff.md
wadm_old/docs/arquitectura/: nginx-config.md
wadm_old/docs/trazabilidad/: README.md  progreso.md  tareas.md
wadm_old/examples/: basic_usage.py
wadm_old/examples/volume_profile/: README.md  volume_profile_example.py
wadm_old/src/: minimal_api.py
wadm_old/src/application/services/: volume_profile_service.py
wadm_old/src/application/use_cases/: __init__.py
wadm_old/src/core/: config.py  entities.py
wadm_old/src/core/algorithms/: __init__.py  order_flow_calculator.py
wadm_old/src/core/domain/: entities.py
wadm_old/src/core/utils/: __init__.py  formatters.py  timeframes.py  validation.py
wadm_old/src/infrastructure/collectors/: __init__.py  base.py
wadm_old/src/infrastructure/database/: __init__.py  data_manager.py  models.py  mongodb.py  repositories.py  (+2 more)
wadm_old/tests/: conftest.py  test_entities.py  test_factories.py  test_health.py  test_performance.py  test_utils.py
wadm_old/tests/fixtures/: __init__.py
(+1612 files in other folders)
